Fix light/dark mode flickering on load

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 :root {
+  color-scheme: light dark;
   --bs-body-bg: #ffffff;
   --bs-body-bg-rgb: 255, 255, 255;
   --bs-secondary-bg: #eeeef3;
